--- a/REACT-PROJECT/tt-proyect/package.json
+++ b/REACT-PROJECT/tt-proyect/package.json
@@ -11,7 +11,9 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.4",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.14.0",
     "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
